<resources>
    <string name="app_name">Pendenz Apps</string>
    <string name="title">Titel</string>
    <string name="description">Beschreibung</string>
    <string name="dateHint">D(D).M(M).YYYY</string>
    <string name="date">Datum eingeben</string>
    <string name="importance">Wichtigkeit</string>
    <string name="savebutton">Pendenz speichern</string>
    <string name="dateMistake">Haben sie Datum in der richtigen Format eingegeben? Bitte geben Sie es in dd.MM.yyyy Format</string>
    <string name="required">"Das ist ein Pflichtfeld"</string>
    <string name="textfieldsMistake">Der Titel sollte weniger als 50 Zeichen haben und Beschreibung sollte weniger als 500 Zeichen haben.</string>
    <string name="saveForm">Erfolgreich gespeichert</string>
    <string-array name="array_name">
        <item>Normal</item>
        <item>Niedrig</item>
        <item>Hoch</item>
    </string-array>
</resources>
